{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 49,
  "lineage": "95ff0091-6c18-9e54-9587-7fb918755b6e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:536548358674:security-group/sg-0b7b63e82cd3c4cfe",
            "description": "RDS access from ROSA",
            "egress": [],
            "id": "sg-0b7b63e82cd3c4cfe",
            "ingress": [],
            "name": "rosa-main-rds-sg",
            "name_prefix": "",
            "owner_id": "536548358674",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-069ef21d610649ec0"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_pg_from_rosa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5432,
            "id": "sgrule-3815539869",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b7b63e82cd3c4cfe",
            "security_group_rule_id": "sgr-088d3489ca7fdee7d",
            "self": false,
            "source_security_group_id": "sg-0d5a7a009e5ddeb84",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rds"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1645642554",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b7b63e82cd3c4cfe",
            "security_group_rule_id": "sgr-04e03ddf0a77de1a8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rds"
          ]
        }
      ]
    }
  ]
}